PARQUET-1245: Fix creating Arrow table with duplicate column names

Author: Antoine Pitrou <antoine@python.org>

Closes #447 from pitrou/ARROW-1974-duplicate-column-name and squashes the following commits:

a764a3c [Antoine Pitrou] Pass ColumnIndex() / FieldIndex() node argument by reference
4398d58 [Antoine Pitrou] ARROW-1974: Fix creating Arrow schema with duplicate column names

Change-Id: I3b2374610ca33b05e0698656ebc40333e9c85f08